# darwin

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PROCESS.md  START_CHAT.md  config.env  example-values.yaml  init.sh  k8s-setup.sh  pre-deploy.sh  service-dependencies.yaml  services.yaml  setup.sh  start.sh
artifact-builder/app_layer/: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
artifact-builder/app_layer/src/serve_app_layer/: logger_config.py  main.py  otel_bootstrap.py
artifact-builder/core/: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
artifact-builder/core/src/serve_core/: build_image.py
darwin-compute/app_layer/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
darwin-compute/app_layer/src/compute_app_layer/: __init__.py  main.py
darwin-compute/app_layer/tests/: conftest.py  elasticsearch.yml  kafka.yml  setup.sh
darwin-compute/app_layer/tests/compute_app_layer/: test_spark_history_server.py
darwin-compute/core/: README.md  pyproject.toml  requirements.txt  setup.cfg
darwin-compute/core/src/compute_core/: cluster_cost.py  cluster_resource.py  compute.py  jupyter.py  remote_command.py  runtime_v2.py
darwin-compute/core/tests/: conftest.py
darwin-compute/core/tests/compute_core/: test_cluster_cost.py  test_compute.py  test_runtime_v2.py
darwin-compute/model/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
darwin-compute/model/src/compute_model/: advance_config.py  cluster_status.py  compute_cluster.py  cpu_node.py  disk.py  gpu_node.py  head_node.py  package.py  policy_definition.py  ray_start_params.py  worker_group.py
darwin-compute/model/tests/: test_advance_config.py  test_cluster_status.py  test_compute_cluster.py  test_cpu_node.py  test_disk.py  test_gpu_node.py  test_head_node.py  test_policy_definition.py  test_ray_start_params.py  test_worker_group.py
darwin-compute/script/: README.md  pyproject.toml  requirements.txt  setup.cfg
darwin-compute/script/src/compute_script/: auto_termination_job.py  get_compute_cluster_state.py  jupyter_pods_management.py  main.py  remote_command_execution_status_update.py  status_poller_job.py
darwin-compute/script/tests/: conftest.py  test_main.py  test_sql_dao.py  test_status_poller_job.py
darwin-compute/script/tests/compute_script/: test_get_compute_cluster_current_status.py  test_get_compute_cluster_dto.py  test_get_compute_cluster_state.py  test_remote_command_execution_poller.py
darwin-workflow/airflow/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg  update_airflow_image.sh
darwin-workflow/airflow/operators/: darwin_operator.py  workflow_operator.py
darwin-workflow/airflow/tests/: test_airflow_job_runner_utils.py
darwin-workflow/airflow/tests/v3/: __init__.py
darwin-workflow/app_layer/: airflow_apis_exploration.http  http-client.env.json  pyproject.toml  requirements.txt  setup.cfg
darwin-workflow/app_layer/src/workflow_app_layer/: main.py
darwin-workflow/app_layer/tests/: conftest.py  test_workflows.py
darwin-workflow/app_layer/tests/v3/: __init__.py  test_workflow_api.py
darwin-workflow/core/: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
darwin-workflow/core/src/workflow_core/: workflow_core_impl.py  workflow_core_interface.py
darwin-workflow/core/tests/: test_validation_utils.py  test_workflow_core.py  test_workflow_core_async.py  test_workflow_utils.py
darwin-workflow/core/tests/v3/: __init__.py  test_airflow_service_v3.py  test_dag_creator_service.py  test_dag_deployer_service.py  test_workflow_run_service_v3.py  test_workflow_service_v3.py
darwin-workflow/model/: pyproject.toml  requirements.txt  setup.cfg
darwin-workflow/model/src/workflow_model/: darwin_workflow.py  job_cluster.py  meta_data.py  requests.py  response.py  workflow.py
darwin-workflow/model/tests/v3/: __init__.py  test_task_models.py  test_workflow_requests.py
hermes-cli/: .blackignore  .gitignore  CLI.md  MANIFEST.in  YAML_CONFIG.md  pyproject.toml  requirements.txt  setup.py
hermes-cli/examples/both-inference-fastapi-serve-example/: fastapi_sample_genrator.yaml
hermes-cli/examples/mcp/: fastapi_sample_genrator.yaml
hermes-cli/examples/offline-fastapi-serve-example/: fastapi_sample_genrator.yaml
hermes-cli/examples/online-fastapi-serve-example/: reduced_fastapi_sample_generator.yaml
hermes-cli/hermes/src/: main.py
hermes-cli/hermes/src/cli/: __init__.py  deployer_request_dtos.py  hermes_deployer.py  hermes_exceptions.py  utils.py
hermes-cli/hermes/src/config/: config.py  constants.py  enums.py  schema.py
hermes-cli/hermes/src/template_service/: configuration_manager.py  constants.py  cookiecutter_context_validation.py  inference_store_validation.py  validate_user_yaml.py  validations.py
hermes-cli/hermes/src/utils/: api_caller_utils.py  template_utils.py
hermes-cli/hermes/tests/: conftest.py  requirements.txt
ml-serve-app/app_layer/: pyproject.toml  requirements.txt  setup.cfg
ml-serve-app/app_layer/src/ml_serve_app_layer/: constants.py  main.py  otel_bootstrap.py
ml-serve-app/core/: pyproject.toml  requirements.txt  setup.cfg
ml-serve-app/core/src/ml_serve_core/: artifact_status_poller.py  sql_queries.py
ml-serve-app/core/tests/: test_storage_strategy.py
ml-serve-app/model/: README.md  pyproject.toml  requirements.txt  setup.cfg
ml-serve-app/model/src/ml_serve_model/: __init__.py  active_deployment.py  app_layer_deployments.py  artifact.py  artifact_builder_job.py  (+8 more)
mlflow/app_layer/: pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
mlflow/app_layer/scripts/: ensure_s3_bucket.py
mlflow/app_layer/tests/: __init__.py  test_email_utils.py
workspace/app-layer/: README.md  pyproject.toml  requirements.txt  setup.cfg
workspace/app-layer/tests/: conftest.py  setup.sh
workspace/core/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
workspace/core/tests/: test_events_utils.py  test_workspacesSDK.py
workspace/sdk/: pyproject.toml  setup.cfg  setup.py
(+2520 files in other folders)
