[metadata]
name = serve_core
description = Darwin ML Serve Core
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    tortoise-orm==0.21.2
    aiomysql==0.2.0
    cryptography>=42.0.0,<43
    PyYAML~=6.0
    boto3~=1.26.71
    typeguard==4.0.0
    mysql-connector-python>=9.0.0
    requests~=2.28.2
    loguru==0.7.2
    shortuuid~=1.0.11
python_requires = >=3.6
include_package_data = True
package_dir =
    serve_core = src/serve_core
    serve_model = ../model/src/serve_model
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
serve_core = py.typed

[flake8]
max-line-length = 160
