[metadata]
name = compute_app_layer
description = Darwin Compute App Layer
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    setuptools==67.8.0
    fastapi~=0.95.1
    fastapi-utils~=0.2.1
    uvicorn~=0.22.0
    gunicorn~=20.1.0
    deepdiff~=6.2.3
    loguru~=0.7.2
python_requires = >=3.8
include_package_data = True
package_dir =
    compute_app_layer = src/compute_app_layer
    compute_core = ../core/src/compute_core
    compute_model = ../model/src/compute_model
    compute_script = ../script/src/compute_script
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    black==24.10.0

[options.package_data]
compute_app_layer = py.typed

[flake8]
max-line-length = 160