[metadata]
name = compute_model
description = Darwin Compute Model
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    dataclasses-json~=0.5.7
python_requires = >=3.8
package_dir =
    compute_model = src/compute_model
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
compute_model = py.typed

[flake8]
max-line-length = 160