[metadata]
name = compute_script
description = Darwin Compute Script
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    setuptools==67.8.0
python_requires = >=3.8
include_package_data = True
package_dir =
    compute_script = src/compute_script
    compute_core = ../core/src/compute_core
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
compute_script = py.typed

[flake8]
max-line-length = 160