[metadata]
name = airflow_core
version = 0.0.1
description = Darwin Airflow Core
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    setuptools==67.8.0
    dataclasses-json~=0.5.7
    mysql-connector-python==8.2.0
    aiomysql==0.2.0
    PyYAML==6.0.1
    requests==2.28.1
    fastapi==0.111.0
    # compute_sdk removed - using direct API calls to compute service
    pytz~=2023.3.post1
    nbconvert==7.16.2
    nbformat==5.9.2
    boto3==1.34.63
    botocore==1.34.63
    aenum==3.1.15
    jsonschema==4.17.3
python_requires = >=3.6
package_dir =
    airflow_core = src/airflow_core
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
workflow_core = py.typed

[flake8]
max-line-length = 160