[metadata]
name = workflow_app_layer
description = Darwin Workflow App Layer
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    setuptools==67.8.0
    requests~=2.28.1
    uvicorn==0.22.0
    dataclasses-json~=0.5.7
    fastapi==0.95.1
    ddtrace==3.9.3
    croniter==1.4.1
    tortoise-orm==0.19.3
    aerich==0.7.2

python_requires = >=3.6
include_package_data = True
package_dir =
    workflow_app_layer = src/workflow_app_layer
    workflow_core = ../core/src/workflow_core
    workflow_model = ../model/src/workflow_model
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
workflow_app_layer = py.typed

[flake8]
max-line-length = 160