[metadata]
name = workflow_core
version = 0.0.1
description = Darwin Workflow Core
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    setuptools==67.8.0
    dataclasses-json~=0.5.7
    mysql-connector-python==8.2.0
    aiomysql==0.2.0
    pytz~=2023.3.post1
    PyYAML==6.0
    pytz==2023.3.post1
    boto3==1.34.63
    croniter==1.4.1
    fastapi==0.95.1
    nbconvert==7.16.2
    nbformat==5.9.2
    # compute_sdk removed - using direct API calls to compute service
    botocore==1.34.63
    aenum==3.1.15
    jsonschema==4.17.3
    mistune==3.0.2
    aiohttp==3.11.12
python_requires = >=3.6
package_dir =
    workflow_core = src/workflow_core
    workflow_model = ../model/src/workflow_model
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
workflow_core = py.typed

[flake8]
max-line-length = 160