[metadata]
name = workflow_model
description = Darwin Workflow Model
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    dataclasses-json~=0.5.7
    shortuuid==1.0.13
    pydantic~=1.10.12
python_requires = >=3.6
package_dir =
    workflow_model = src/workflow_model
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
workflow_model = py.typed

[flake8]
max-line-length = 160