[metadata]
name = ml_serve_app_layer
description = Darwin ML Serve App Layer
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    fastapi==0.111.0
    fastapi-utils==0.8.0
    uvicorn==0.22.0
    loguru==0.7.2
    opentelemetry-sdk==1.38.0
    opentelemetry-api==1.38.0
    opentelemetry-exporter-otlp-proto-http==1.38.0
    opentelemetry-instrumentation-fastapi==0.59b0
python_requires = >=3.6
include_package_data = True
package_dir =
    ml_serve_app_layer = src/ml_serve_app_layer
    ml_serve_core = ../core/src/ml_serve_core
    ml_serve_model = ../model/src/ml_serve_model
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[flake8]
max-line-length = 160