[metadata]
name = ml_serve_core
description = Darwin ML Serve Core
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    tortoise-orm==0.21.2
    aiomysql==0.2.0
    cryptography>=42.0.0,<43
    pyhocon==0.3.60
    aiohttp==3.8.1
    fastapi==0.111.0
    pydantic==2.7.1
    PyYAML~=6.0
    loguru==0.7.2
    typing-inspect>=0.9.0
    typeguard==4.0.0
    # requests for MLflow REST API calls (model size detection)
    requests~=2.32.3
python_requires = >=3.6
include_package_data = True
package_dir =
    ml_serve_core = src/ml_serve_core
    ml_serve_model = ../model/src/ml_serve_model
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
ml_serve_core = py.typed

[flake8]
max-line-length = 160