[metadata]
name = ml_serve_model
description = Darwin ML Serve Model
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    tortoise-orm==0.21.2
python_requires = >=3.6
package_dir =
    ml_serve_model = src/ml_serve_model
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
ml_serve_model = py.typed

[flake8]
max-line-length = 160