[metadata]
name = mlflow_app_layer
description = Darwin Mlflow App Layer
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    setuptools==68.2.2
    fastapi==0.103.2
    uvicorn==0.23.2
    ddtrace==1.20.2
    requests==2.31.0
    typeguard==4.0.0
    pydantic==2.7.0
    mysql-connector-python~=8.0.33
    psycopg2-binary
    pymysql==1.0.2
    protobuf==3.20.3
python_requires = >=3.6
include_package_data = True
package_dir =
    mlflow_app_layer = src/mlflow_app_layer
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[flake8]
max-line-length = 160