[metadata]
name = workspace_app_layer
description = Darwin Workspace App Layer
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    pydantic~=1.10.2
    fastapi~=0.85.1
    typeguard~=2.13.3
    ddtrace==1.15.1
    uvicorn==0.22.0
    setuptools==67.8.0
    opentelemetry-distro~=0.59b0
    opentelemetry-exporter-otlp~=1.38.0
    opentelemetry-instrumentation-fastapi~=0.59b0
    opentelemetry-instrumentation-mysql~=0.59b0
    opentelemetry-instrumentation-requests~=0.59b0
python_requires = >=3.6
include_package_data = True
package_dir =
    workspace_app_layer = src/workspace_app_layer
    workspace_core = ../core/src/workspace_core
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
workspace_app_layer = py.typed

[flake8]
max-line-length = 160