[metadata]
name = workspace_core
description = Darwin Workspace Core
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
install_requires =
    setuptools==67.8.0
    typeguard~=2.13.3
    requests==2.28.1
    schedule~=1.1.0
    httpx~=0.23.3
    mysql-connector-python~=8.0.33
    pytz~=2023.3
    dataclasses_json~=0.5.14
    boto3==1.33.2
python_requires = >=3.6
include_package_data = True
package_dir =
    workspace_core = src/workspace_core
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
workspace_core = py.typed

[flake8]
max-line-length = 160