[metadata]
name = darwin_workspace
version = 1.0.1
description = Darwin Workspace SDK
platforms = any
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    setuptools==67.8.0
    jupyterlab==4.3.0; python_version >= "3.9"
    jupyterlab-git~=0.50.0,<0.51.0; python_version >= "3.9"
    jupyter-ai~=2.12.0,<3.0.0; python_version >= "3.9"
    jupyter-ai-magics~=2.12.0,<3.0.0; python_version >= "3.9"
    ipywidgets==8.1.2; python_version >= "3.9"
    pygwalker==0.3.20; python_version >= "3.9"
    python-lsp-server[all]==1.12.0; python_version >= "3.9"
    jupyterlab-lsp==5.1.0; python_version >= "3.9"
    ipython-autotime==1.0.4; python_version >= "3.9"
;    ijava-kernel==1.0.0; python_version >= "3.9"
python_requires = >=3.9
include_package_data = True
zip_safe = no

[easy_install]
extra_index_url = http://pypi-server.darwin-d11-stag.local/simple/
trusted-host = pypi-server.darwin-d11-stag.local

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
workspace_sdk = py.typed

[flake8]
max-line-length = 160