[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.repository_name.lower().strip().replace(' ', '_') }}"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.7.0",
    "pyarrow==14.0.2",
    "dependency-injector==4.45.0",
    "aiohttp>=3.8.0",
    "typeguard>=4.4.0",
    "requests>=2.25.0",
    "aioredis>=2.0.0",
    {%- if cookiecutter.repository_inference_type in ['online', 'both'] %}
    "mlflow==2.12.2",
    {%- endif %}
    "python-multipart==0.0.5",
    {%- if cookiecutter.runtime_environment is not string %}
    {%- for dependency in cookiecutter.runtime_environment.dependencies %}
    "{{ dependency }}",
    {%- endfor %}
    {%- endif %}
    "loguru>=0.7.0",
    "pytest>=7.3.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pytest-html==4.1.1",
    "ddtrace==1.15.1",
    "numpy==1.26.4"
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pytest-html==4.1.1"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "asyncio: mark test as async",
    "api: mark test as API integration test"
]
