[metadata]
name = {{ cookiecutter.repository_name.lower().strip().replace(' ', '_').replace(':', '_').replace('-', '_') }}
version = 0.1.0
description = FastAPI service for model serving


[options.extras_require]
dev =
   fastapi>=0.68.0
    uvicorn>=0.15.0
    pydantic>=1.8.0
    pyarrow==14.0.2
    dependency-injector==4.45.0
    aiohttp>=3.8.0
    typeguard>=4.4.0
    requests>=2.25.0
    aioredis>=2.0.0
    {%- if cookiecutter.repository_inference_type in ['online', 'both'] %}
    mlflow==2.22.2
    {%- endif %}
    loguru>=0.7.0
    python-multipart>=0.0.5
    {%- if cookiecutter.runtime_environment is not string %}
    {%- for dependency in cookiecutter.runtime_environment.dependencies %}
    {{ dependency }}
    {%- endfor %}
    {%- endif %}

test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0
    pytest-mock>=3.10.0
    httpx>=0.24.0
    requests-mock>=1.11.0

[easy_install]
index_url = <index_url>

[distutils]
index-server = pypi-prod